#183: adds init scripts to download openjfx sdks